--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"Server=(localdb)\\MSSQLLocalDB;Database=BlanketNet;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost,1433;Database=BlanketNet;User Id=SA;Password=Password@1;TrustServerCertificate=True",
+    "Redis": "localhost"
   }
 }
